external-crates/move/crates/move-compiler/tests/move_check/typing/pack_unit.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/pack_unit.move:5:9
  │
5 │         Box { f: () };
  │         ^^^^^^^^^^^^^
  │         │        │
  │         │        Expected a single non-reference type, but found: '()'
  │         Invalid type argument
